--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 .nav {
   width: 60%;
   list-style-type: none;
-  align: center;
+  align-items: center;
   display: flex;
   justify-content: space-between;
   height: 100%;
@@ -42,4 +42,51 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-right: 5%;
+}
+
+.bg-image1 {
+  background-image: url(/img/main-slider-pic.jpg);
+  background-color: #c7b39b;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+}
+
+.bg-title1 {
+  display: flex;
+  width: fit-content;
+  height: 100px;
+  justify-content: space-between;
+  text-align: center;
+  flex-direction: column;
+
+  margin-left: auto;
+  margin-top: 18%;
+  margin-right: 12%;
+  color: rgb(156, 137, 105);
+  text-transform: uppercase;
+  line-height: 70px;
+  font-size: 25px;
+}
+
+.bikes {
+  font-size: 80px;
+}
+
+.features {
+  font-size: 20px;
+  font-weight: bolder;
+  line-height: 50px;
+  margin: 0 auto;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  width: 60%;
+  text-transform: uppercase;
+  color: rgb(156, 137, 105);
 }
