--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   font-family: "Montserrat", "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
+  background-color: rgb(233, 225, 214);
 }
 
 .nav-block {
@@ -61,7 +62,7 @@ body {
   justify-content: space-between;
   text-align: center;
   flex-direction: column;
-
+  align-items: center;
   margin-left: auto;
   margin-top: 18%;
   margin-right: 12%;
@@ -89,4 +90,33 @@ body {
   width: 60%;
   text-transform: uppercase;
   color: rgb(156, 137, 105);
+}
+
+.free {
+  line-height: 30px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.mini-catalogue {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
+  padding-right: 10%;
+  padding-left: 10%;
+  padding-bottom: 5%;
+}
+
+.bikes {
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  text-align: center;
+  color: rgb(156, 137, 105);
+}
+
+.bikes-pic {
+  border: 4px solid white;
 }
