--- a/style.css
+++ b/style.css
@@ -104,9 +104,18 @@ a {
   display: flex;
   justify-content: space-around;
   padding-top: 5%;
-  padding-right: 10%;
-  padding-left: 10%;
+  padding-right: 15%;
+  padding-left: 15%;
   padding-bottom: 5%;
+}
+
+.price {
+  color: rgb(187, 79, 79);
+  font-weight: bold;
+}
+
+.bike-info {
+  line-height: 25px;
 }
 
 .bikes {
@@ -118,5 +127,78 @@ a {
 }
 
 .bikes-pic {
-  border: 4px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.bikes-buy {
+  display: block;
+  background-color: rgb(187, 79, 79);
+  padding: 10px 5px 10px 5px;
+  margin-top: 8%;
+  margin-bottom: 10%;
+}
+
+.all-bikes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.svg-line {
+  width: 700px;
+}
+
+.all-bikes-button {
+  display: flex;
+  justify-content: center;
+  width: 335px;
+  height: 17px;
+  text-transform: uppercase;
+  font-size: 22px;
+  border: 2px solid rgb(156, 137, 105);
+  color: rgb(156, 137, 105);
+  padding: 15px;
+}
+
+.bgimage2 {
+  background-image: url(/img/bgpic.jpg);
+  background-color: #c7b39b;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 60vh;
+}
+
+.bgimage2-blocks {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.mastery {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: rgb(186, 164, 127);
+  padding-left: 100px;
+  line-height: 30px;
+}
+
+.more {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 24px;
+  color: rgb(156, 137, 105) !important;
+  text-decoration: none;
+  border: 2px solid rgb(156, 137, 105);
+  width: 235px;
+  height: 55px;
+  margin-top: 25px;
 }
