--- a/style.css
+++ b/style.css
@@ -152,8 +152,9 @@ a {
 .all-bikes-button {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 335px;
-  height: 17px;
+  height: 30px;
   text-transform: uppercase;
   font-size: 22px;
   border: 2px solid rgb(156, 137, 105);
