--- a/style.css
+++ b/style.css
@@ -203,3 +203,86 @@ a {
   height: 55px;
   margin-top: 25px;
 }
+
+.bgimage3 {
+  background-image: url(/img/bgpic.jpg);
+  background-color: #c7b39b;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 120vh;
+}
+
+.bgimage3-blocks {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 7%;
+}
+
+.mastery {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: rgb(186, 164, 127);
+  line-height: 30px;
+  margin-right: 90px;
+}
+
+.form {
+  background-color: ;
+  color: rgb(138, 131, 121);
+  font-size: 34px;
+  display: grid;
+  grid-template-columns: 300px 300px;
+  grid-template-rows: 60px 60px;
+  grid-template-areas:
+    "name surname"
+    "email email";
+  grid-gap: 30px;
+  margin-top: 30px;
+}
+
+.name {
+  grid-area: name;
+  background-color: transparent;
+  border: 1px solid rgb(156, 137, 105);
+  color: rgb(138, 131, 121);
+  font-size: 24px;
+  padding-left: 15px;
+}
+.surname {
+  grid-area: surname;
+  background-color: transparent;
+  border: 1px solid rgb(156, 137, 105);
+  color: rgb(138, 131, 121);
+  font-size: 24px;
+  padding-left: 15px;
+}
+.email {
+  grid-area: email;
+  background-color: transparent;
+  border: 1px solid rgb(156, 137, 105);
+  color: rgb(138, 131, 121);
+  font-size: 24px;
+  padding-left: 15px;
+}
+
+.radio {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 24px;
+  cursor: pointer;
+  width: 600px;
+  color: rgb(233, 225, 214);
+}
+input[type="radio"] {
+  background-color: transparent;
+  border-radius: 16px;
+  cursor: pointer;
+}
